# rust-lib-and-bin

./: Cargo.toml  LICENSE  README.md
src/: bin.rs  bmod.rs  lib.rs  mod0.rs
src/lib/: mod0.rs
src/lib/mod2/: bar.rs  foo.rs  mod.rs
src/mod1/: mod.rs
src/mod2/: mod.rs
